--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build website
         run: npm run build
       - name: Upload artifacts
-        action: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: dist-files
           path: |
